# phoenix

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  artifact-readme.md  build.sh  gleison.diff  rebuild.sh
Analysis/: arith.txt  histogram.ipynb
Collect/: CMakeLists.txt  collect.c  collect.h
Count/: CMakeLists.txt  Count.cpp  Count.h
CountArith/: CMakeLists.txt  Count.cpp  Count.h
CountStores/: CMakeLists.txt  Store.cpp  Store.h
DAG/: CMakeLists.txt  DAG.cpp  DAG.h  NodeSet.h  ReachableNodes.h  auto_profile.h  constantWrapper.h  constraint.h  constraintVisitor.h  dependency.cpp  dependency.h  depthVisitor.h  dotVisitor.h  insertIf.cpp  insertIf.h  inter_profile.cpp  inter_profile.h  intra_profile.h  manual_profile.cpp  manual_profile.h  node.cpp  node.h  parser.cpp  parser.h  propagateAnalysisVisitor.h  property.h  utils.cpp  utils.h  visitor.h
DependenceAnalysis/: CMakeLists.txt  dependenceAnalysis.cpp  dependenceAnalysis.h  dependenceAnalysisWrapperPass.cpp  dependenceAnalysisWrapperPass.h  dependenceGraph.cpp  dependenceGraph.h
GEP/: CMakeLists.txt  GEP.cpp  GEP.h
Identify/: CMakeLists.txt  Gep.h  Geps.h  Identify.cpp  Identify.h  Position.h
Instrument/: CMakeLists.txt  Instrument.cpp  Instrument.h
Optimize/: CMakeLists.txt  Opt.cpp  Opt.h  Optimize.cpp  Optimize.h
PDG/: CMakeLists.txt  PDGAnalysis.cpp  PDGAnalysis.h  PDGAnalysisWrapperPass.cpp  PDGAnalysisWrapperPass.h  dependenceGraph.cpp  dependenceGraph.h
Pass/: CMakeLists.txt  Instrument.cpp  Instrument.h  MyPass.cpp  MyPass.h
Profile/: CMakeLists.txt  Dfs.cpp  Dfs.h  (+4 more)
(+109 files in other folders)
